--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Isto &eacute; um par&aacute;grafo</p>
     <h2 id="atributo1">Isto &eacute; um h2 com atributo id</h2>
     <p><strong>Este par&aacute;grafo &eacute; importante, est&aacute; em negrito e tem o seguinte trecho de c&oacute;digo: <code>console.log('foobar')</code></strong></p>
-    <p>Este par&aacute;grafo cont&eacute;m um link para <a href="https://www.google.com/" target="_blank" rel="noopener noreferrer">https://www.google.com/</a></p>
+    <p>Este par&aacute;grafo cont&eacute;m um link para <a href="https://www.google.com/" target="_blank">https://www.google.com/</a></p>
     <ul>
         <li>Isto &eacute; o item de uma <em>lista n&atilde;o ordenada</em> e a primeira express&atilde;o &quot;lista n&atilde;o ordenada&quot; dele possui &ecirc;nfase</li>
         <li>Este &eacute; mais um item da lista</li>
