--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div>
     <h1>Esta &eacute; uma tag <em>H1</em> e o &quot;H1&quot; est&aacute; com &ecirc;nfase</h1>
-    <p>Isto &eacute; um par&aacute;grafo</p>
+    <p>Isto &eacute; um <em>par&aacute;grafo</em></p>
     <h2 id="atributo1">Isto &eacute; um h2 com atributo id</h2>
     <p><strong>Este par&aacute;grafo &eacute; importante, est&aacute; em negrito e tem o seguinte trecho de c&oacute;digo: <code>console.log('foobar')</code></strong></p>
     <p>Este par&aacute;grafo cont&eacute;m um link para <a href="https://www.google.com/" target="_blank" rel="noopener noreferrer">https://www.google.com/</a></p>
