--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h3 id="atributo2">Isto &eacute; um h3 com o atributo id</h3>
     <p>Isto &eacute; um par&aacute;grafo</p>
     <h2 id="atributo3">Isto &eacute; um h2 atributo id</h2>
-    <p>Isto &eacute; um par&aacute;grafo que fala sobre abrevia&ccedil;&atilde;o HTML e a import&acirc;ncia do atributo <a href="https://html.spec.whatwg.org/multipage/dom.html#the-lang-and-xml:lang-attributes" target="_blank">lang</a></p>
+    <p>Isto &eacute; um par&aacute;grafo que fala sobre abrevia&ccedil;&atilde;o <abbr title="Hypertext Markup Language">HTML</abbr> e a import&acirc;ncia do atributo <a href="https://html.spec.whatwg.org/multipage/dom.html#the-lang-and-xml:lang-attributes" target="_blank">lang</a></p>
     <p>Este v&iacute;deo demonstra um <a href="https://www.youtube.com/watch?v=NP94u7y_KkQ" target="_blank">leitor de tela lendo uma p&aacute;gina</a> sem o idioma definido</p>
     <p><a href="https://smartquotesforsmartpeople.com/" target="_blank">Cuidado com a tipografia</a>. Voc&ecirc; precisa ter aten&ccedil;&atilde;o com as aspas que est&aacute; usando meu jovem!</p>
     <p>E por favor, use fontes que n&atilde;o sejam <em>Times New Roman</em> em seus projetos.</p>
