--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>Este v&iacute;deo demonstra um <a href="https://www.youtube.com/watch?v=NP94u7y_KkQ" target="_blank">leitor de tela lendo uma p&aacute;gina</a> sem o idioma definido</p>
     <p><a href="https://smartquotesforsmartpeople.com/" target="_blank">Cuidado com a tipografia</a>. Voc&ecirc; precisa ter aten&ccedil;&atilde;o com as aspas que est&aacute; usando meu jovem!</p>
     <p>E por favor, use fontes que n&atilde;o sejam <em>Times New Roman</em> em seus projetos.</p>
-    <blockquote>&ldquo;The student searchs the world for meaning. The master finds worlds of meaning in the search.&rdquo; - Unknown</blockquote>
+    <blockquote>&ldquo;The student searchs the world for meaning. The master finds worlds of meaning in the search.&rdquo; &horbar; Unknown</blockquote>
     <hr>
     </div>
 </body>
