--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>Esta &eacute; uma tag <em>H1</em> e o &quot;H1&quot; est&aacute; com &ecirc;nfase</h1>
     <p>Isto &eacute; um <em>par&aacute;grafo</em></p>
     <h2 id="atributo1">Isto &eacute; um h2 com atributo id</h2>
-    <p><strong>Este par&aacute;grafo &eacute; importante, est&aacute; em negrito e tem o seguinte trecho de c&oacute;digo: <code>console.log('foobar')</code></strong></p>
-    <p>Este par&aacute;grafo cont&eacute;m um link para <a href="https://www.google.com/" target="_blank">https://www.google.com/</a></p>
+    <p><strong>Este par&aacute;grafo &eacute; importante, est&aacute; em negrito e tem o seguinte trecho de c&oacute;digo:</strong><code>console.log('foobar')</code></p>
+    <p>Este par&aacute;grafo cont&eacute;m um link para <a href="https://www.google.com/" rel="noopener noreferrer" target="_blank">https://www.google.com/</a></p>
     <ul>
         <li>Isto &eacute; o item de uma <em>lista n&atilde;o ordenada</em> e a primeira express&atilde;o &quot;lista n&atilde;o ordenada&quot; dele possui &ecirc;nfase</li>
         <li>Este &eacute; mais um item da lista</li>
@@ -26,9 +26,9 @@
     <h3 id="atributo2">Isto &eacute; um h3 com o atributo id</h3>
     <p>Isto &eacute; um par&aacute;grafo</p>
     <h2 id="atributo3">Isto &eacute; um h2 atributo id</h2>
-    <p>Isto &eacute; um par&aacute;grafo que fala sobre abrevia&ccedil;&atilde;o <abbr title="Hypertext Markup Language">HTML</abbr> e a import&acirc;ncia do atributo <a href="https://html.spec.whatwg.org/multipage/dom.html#the-lang-and-xml:lang-attributes" target="_blank">lang</a></p>
-    <p>Este v&iacute;deo demonstra um <a href="https://www.youtube.com/watch?v=NP94u7y_KkQ" target="_blank">leitor de tela lendo uma p&aacute;gina</a> sem o idioma definido</p>
-    <p><a href="https://smartquotesforsmartpeople.com/" target="_blank">Cuidado com a tipografia</a>. Voc&ecirc; precisa ter aten&ccedil;&atilde;o com as aspas que est&aacute; usando meu jovem!</p>
+    <p>Isto &eacute; um par&aacute;grafo que fala sobre abrevia&ccedil;&atilde;o <abbr title="Hypertext Markup Language">HTML</abbr> e a import&acirc;ncia do atributo <a href="https://html.spec.whatwg.org/multipage/dom.html#the-lang-and-xml:lang-attributes" rel="noopener noreferrer" target="_blank"><code>lang</code></a></p>
+    <p>Este v&iacute;deo demonstra um <a href="https://www.youtube.com/watch?v=NP94u7y_KkQ" rel="noopener noreferrer" target="_blank">leitor de tela lendo uma p&aacute;gina</a> sem o idioma definido</p>
+    <p><a href="https://smartquotesforsmartpeople.com/" rel="noopener noreferrer" target="_blank">Cuidado com a tipografia</a>. Voc&ecirc; precisa ter aten&ccedil;&atilde;o com as aspas que est&aacute; usando meu jovem!</p>
     <p>E por favor, use fontes que n&atilde;o sejam <em>Times New Roman</em> em seus projetos.</p>
     <blockquote>&ldquo;The student searchs the world for meaning. The master finds worlds of meaning in the search.&rdquo; &horbar; Unknown</blockquote>
     <hr>
